<?xml version="1.0" encoding="utf-8"?>



<!--Created by Jordan Weaver-->




<resources>

    <string name="app_name">J_weaver_LongProject_CRUD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addButton">Add New</string>
    <string name="back_button">Back</string>
    <string name="form_title">Profile Infomation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="school_name">Phone Model</string>
    <string name="save_button">Save</string>
    <string name="details_title">Profile Information</string>
    <string name="displayName">Name:</string>
    <string name="edit_button">Edit Profile</string>
    <string name="delete_button">Delete</string>

</resources>
